--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,7 +24,7 @@
 	</div>
 </div>
 
-<div class="container">
+{{!-- <div class="container">
 	<div class="row">
 		<div class="col-md-12 text-center enter_section">
 			<form action="/burgers/create" method="POST">
@@ -34,4 +34,4 @@
 			<p>Enter a burger you want to eat Click the "Submit" button.</p>
 		</div>
 	</div>
-</div>
+</div> --}}
